[tool.poetry]
name = "bigcommerce-toolkit"
version = "0.1.4"
description = "A UNIX-style tool which provides easy access to BigCommerce's API from the command line."
authors = ["Joey Hoer <me@joeyhoer.com>"]
readme = "README.md"
homepage = "https://github.com/TrellisCommerce/bigcommerce-toolkit"
repository = "https://github.com/TrellisCommerce/bigcommerce-toolkit"
keywords = ["bigcommerce", "api", "cli"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32"
click = "^8.1"

[tool.poetry.scripts]
bigc = "bigcommerce_toolkit.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
